# example-nix-python

./: flake.nix  pyproject.toml
example_nix_python/: main.py
tests/: test_example_nix_python.py
