[tool.poetry]
name = "example-nix-python"
version = "0.1.0"
description = "Example project in Python using Nix."
authors = ["ALT F4 LLC"] 

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start = "example_nix_python.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
